--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "laravel-lang/common": "^4.0",
-        "laravel/breeze": "^2.0@dev",
+        "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
@@ -47,13 +47,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --ansi"
+            "@php artisan migrate --graceful --ansi"
         ]
     },
     "extra": {
-        "branch-alias": {
-            "dev-master": "11.x-dev"
-        },
         "laravel": {
             "dont-discover": []
         }
@@ -67,6 +64,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
